--- a/styles/banner.css
+++ b/styles/banner.css
@@ -3,6 +3,7 @@
     color: var(--branco);
     text-align: center;
     padding: 2.5em 2em;
+    font-family: var(--fonte-principal);
 }
 
 .banner__titulo {
@@ -28,4 +29,7 @@
     font-family: var(--fonte-principal);
     font-size: 14px;
     font-weight: 400;
+    text-align: center;
+    color: var(--branco);
+    background: url('../img/Pesquisa.svg') no-repeat left center;
 }
