--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@
     --azul-gradiente: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --azul: #002F52;
     --preto: rgba(0, 0, 0, 0.85);
+    --preto-1: #000000;
     --fonte-principal: 'Poppins';
+    --fonte-h1: 'Josefin Sans', sans-serif;
+
 }
 
 body {
