--- a/styles/banner.css
+++ b/styles/banner.css
@@ -33,3 +33,21 @@
     color: var(--branco);
     background: url('../img/Pesquisa.svg') no-repeat left center;
 }
+
+@media screen and (min-width: 1024px) {
+    .banner {
+        padding: 5em 0;
+    }
+
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 45%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 6em;
+    }
+}
