--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -2,7 +2,7 @@
     font-family: var(--fonte-principal);
 }
 
-.carrossel__titulo {
+.carrossel__titulo, .carross__titulo {
     font-weight: 700;
     font-size: 18px;
     background-color: var(--branco);
@@ -93,4 +93,30 @@
 
 .estrelas {
     margin-bottom: .5em;
+}
+
+@media screen and (min-width: 1024px) {
+    
+    .carrossel__titulo, .carross__titulo {
+        font-size: 26px;
+        padding: 1.6em 0 .7em 0;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-button-prev, .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 40%;
+        margin: 2em auto;
+    }
 }
