--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
     --azul: #002F52;
     --preto: rgba(0, 0, 0, 0.85);
     --preto-1: #000000;
+    --cinza:#474646;
+    --cinza-1:#858585;
     --fonte-principal: 'Poppins';
     --fonte-h1: 'Josefin Sans', sans-serif;
 
