--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,16 @@
     display: inline-block;
 }
 
+.container__botao:checked ~ .container__rotulo > .cabecalho__menu-hamburguer {
+    background-image: url('../img/MenuAberto-branco.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.container__botao:checked ~ .container__rotulo {
+    background: var(--azul-gradiente);
+}
+
 .cabecalho {
     display: flex;
     justify-content: space-between;
@@ -63,6 +73,9 @@
     display: none;
 }
 
+.container__texto {
+    display: none;
+}
 
 
 @media screen and (min-width: 1024px) {
@@ -106,12 +119,57 @@
         display: none;
     }
 
-    .apcoes__botao{
+    .opcoes__botao{
         display: none;
     }
 
-    .apcoes__botao:checked ~ .lista-menu{
+    .opcoes__botao:checked ~ .lista-menu{
         display: block;
         width: auto;
+    }
+
+    .opcoes__botao:checked ~ .opcoes__rotulo > .opcoes__item {
+        background: var(--azul-gradiente);
+        color: var(--branco)
+    }
+
+    .opcoes__item {
+       padding: 2em 1em;
+    }
+
+    .opcoes__rotulo {
+        display: flex;
+
+    }
+    
+    .lista-menu__item:hover {
+        background: var(--azul-gradiente);
+    }
+
+    .lista-menu__item:hover > .lista-menu__link {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .container__texto {
+        display: block;
+    }
+
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto-1);
+    }
+    
+
+    .cabecalho {
+        padding: 0 2em;
+    }
+
+    .opcoes {
+        margin-right: auto;
     }
 }
